--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,13 @@
 xParam=9994
+#on va juste commencer par ce fichier et apres on appeler le config central
+spring.datasource.url=jdbc:mysql://localhost:3306/banque-database
+spring.datasource.username=root
+spring.datasource.password=Formation2023*
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.hibernate.use-new-id-generator-mappings=false
