--- a/eureka-service.properties
+++ b/eureka-service.properties
@@ -1,3 +1,4 @@
-xParam=99
+#NB : Le port par défaut du micro-service « Eureka Server » est 8761
 server.port=8761
-#NB : Le port par défaut du micro-service « Eureka Server » est 8761.
+#permet d’indiquer à « Eureka Server » de ne pas s’enregistrer lui-même, quand il démarre.
+eureka.client.registerWithEureka=false
